# OpenConstructionERP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_START.md  AUTHORS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  NOTICE  R6_PROPDEV_E2E_REPORT.md  R6_PROPDEV_LEAD_RESERVATION_SPA_REPORT.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.quickstart.yml  docker-compose.yml  package-lock.json  release-notes.md  release-please-config.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
_handover_dossiers/: 00_remaining-product-backlog-competitive-ro.md  01_quality-push-94-deep-test-de-stub-polish.md  02_release-playbook-build-test-cut.md  03_git-topology-and-repo-hygiene.md  04_vps-and-marketing-site-deploy.md  05_rules-and-landmines.md  06_marketing-site-i18n.md
backend/: .dockerignore  README.md  build_all_catalogs.py  build_catalog.py  hatch_build.py  openestimate.db-shm  openestimate.db-wal  probe_rank.py  pyproject.toml  qa_ai_test.py  qa_api_test.py  requirements.txt  test_all_modules.py  test_final_qa.py  test_full.py
desktop/: README.md  build-sidecar.sh  pyinstaller.spec
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: I18N_AUDIT_2026-05-24_BACKFILL.md  INSTALL_LINUX.md  PLAN-4D-5D.md  contacts-bridge.md  docs.html  expand_docs.py  expand_docs2.py
frontend/: _qa_tmp_tsc_dep.txt  audit-wave1.mjs  (+46 more)
packs/aus/: README.md  pyproject.toml
packs/aus-nzs/: README.md  pyproject.toml
packs/aus-nzs/src/openconstructionerp_aus_nzs/: DEPRECATED.txt  __init__.py
packs/aus/src/openconstructionerp_aus/: __init__.py  manifest.py  onboarding.yaml
packs/aus/src/openconstructionerp_aus/locales/: en-AU.json
packs/aus/src/openconstructionerp_aus/rule_packs/: as_1684_timber.json  as_3600_concrete.json  as_4000_contracts.json  as_4100_steel.json  ncc_2022.json  rawlinsons_benchmarks.json
packs/batimatech-ca/: README.md  pyproject.toml
packs/batimatech-ca/src/openconstructionerp_batimatech_ca/: __init__.py  manifest.py  onboarding.yaml
packs/batimatech-ca/src/openconstructionerp_batimatech_ca/locales/: en-CA.json  fr-CA.json
packs/batimatech-ca/src/openconstructionerp_batimatech_ca/rule_packs/: ccdc_14.json  ccdc_2.json  ccdc_5a.json  csa_a23.json  csa_a23_1.json  csa_a23_3.json  csa_s16.json  nbc_2020.json  ontario_obc.json  quebec_ccq.json
packs/bimhessen-de/: pyproject.toml
packs/bimhessen-de/src/openconstructionerp_bimhessen_de/: __init__.py  manifest.py  onboarding.yaml
packs/bimhessen-de/src/openconstructionerp_bimhessen_de/locales/: de.json
packs/bimhessen-de/src/openconstructionerp_bimhessen_de/rule_packs/: bki_benchmarks.json  din_276.json  gaeb_x83_x86.json  hoai_2021_fees.json  iso_19650_cde.json  lv_leistungsverzeichnis_quality.json  vob_2019.json  vob_2023.json
packs/doker-formwork/: README.md  pyproject.toml
packs/doker-formwork/src/openconstructionerp_doker_formwork/: __init__.py  manifest.py  onboarding.yaml
packs/doker-formwork/src/openconstructionerp_doker_formwork/catalogue/: doker_systems.json
packs/doker-formwork/src/openconstructionerp_doker_formwork/locales/: de.json
packs/doker-formwork/src/openconstructionerp_doker_formwork/rule_packs/: concrete_din_en_206.json  dguv_101_008_formwork_safety.json  din_18218_formwork_pressure.json  din_en_12812_falsework.json  din_en_13670_concrete_execution.json  formwork_cycle_economics.json  formwork_cycle_quality.json  vob_c_din_18331_concrete_works.json
packs/india-cpwd/: pyproject.toml
packs/india-cpwd/src/openconstructionerp_india_cpwd/: __init__.py  manifest.py  onboarding.yaml
packs/india-cpwd/src/openconstructionerp_india_cpwd/locales/: hi.json
packs/india-cpwd/src/openconstructionerp_india_cpwd/rule_packs/: cpwd_specs_2019.json  dsr_delhi_rates.json  india_tax_construction.json  is_456_concrete.json  is_800_steel.json  is_seismic_loads.json  nbc_india_2016.json  rera_2016.json
packs/modular-prefab/: pyproject.toml
packs/modular-prefab/src/openconstructionerp_modular_prefab/: __init__.py  manifest.py  onboarding.yaml
packs/modular-prefab/src/openconstructionerp_modular_prefab/rule_packs/: as_5104_modular.json  factory_qc_tolerances.json  modular_standards.json  module_handover_protocol.json  transport_logistics.json
packs/nzs/: README.md  pyproject.toml
packs/nzs/src/openconstructionerp_nzs/: __init__.py  manifest.py  onboarding.yaml
packs/nzs/src/openconstructionerp_nzs/locales/: en-NZ.json
packs/nzs/src/openconstructionerp_nzs/rule_packs/: nzbc_acceptable_solutions.json  nzs_3604_timber.json  nzs_3910_2023_contracts.json  rawlinsons_nz_benchmarks.json
packs/renewables-epc/: pyproject.toml
packs/renewables-epc/src/openconstructionerp_renewables_epc/: __init__.py  manifest.py  onboarding.yaml
packs/renewables-epc/src/openconstructionerp_renewables_epc/rule_packs/: bess_design.json  iec_61400_wind.json  iec_61400_wind_full.json  iec_61730_pv.json  lcoe_templates.json  mv_cable_specs.json  pv_design_full.json  renewables_grid_compliance.json
packs/uk-jct/: pyproject.toml
packs/uk-jct/src/openconstructionerp_uk_jct/: __init__.py  manifest.py  onboarding.yaml
packs/uk-jct/src/openconstructionerp_uk_jct/locales/: en-GB.json
packs/uk-jct/src/openconstructionerp_uk_jct/rule_packs/: bcis_benchmarks.json  bsa_2022.json  cdm_2015.json  jct_2024_contract_clauses.json  jct_contract_clauses.json  nrm_1_cost_planning.json  nrm_2_detailed_measurement.json  nrm_3_maintenance.json
packs/us-rsmeans/: pyproject.toml
packs/us-rsmeans/src/openconstructionerp_us_rsmeans/: __init__.py  manifest.py  onboarding.yaml
packs/us-rsmeans/src/openconstructionerp_us_rsmeans/locales/: en-US.json
packs/us-rsmeans/src/openconstructionerp_us_rsmeans/rule_packs/: aia_a201_2017.json  aia_owner_contractor.json  ibc_2021.json  masterformat_2018.json  masterformat_2020.json  osha_1926.json  rsmeans_city_index.json  uniformat_ii_e1557.json
(+4191 files in other folders)
