[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openconstructionerp-aus-nzs"
version = "0.2.0"
description = "DEPRECATED meta-pack — use openconstructionerp-aus (Australia) or openconstructionerp-nzs (New Zealand) instead. This shim defaults to the Australia pack for backward compatibility."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "OpenConstructionERP", email = "info@datadrivenconstruction.io" },
]
keywords = ["openconstructionerp", "ocerp", "partner-pack", "deprecated", "australia", "new-zealand"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Other Audience",
    "Topic :: Office/Business",
    "Natural Language :: English",
    "Development Status :: 7 - Inactive",
]
dependencies = [
    "openconstructionerp>=5.5.0",
    "openconstructionerp-aus>=0.1.0",
]

[project.urls]
Source = "https://github.com/DataDrivenConstruction/openconstructionerp"

[project.entry-points."openconstructionerp.partner_packs"]
aus-nzs = "openconstructionerp_aus_nzs:MANIFEST"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openconstructionerp_aus_nzs = [
    "DEPRECATED.txt",
]
