[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openconstructionerp-batimatech-ca"
version = "0.1.0"
description = "Pre-configured partner pack for Canadian construction companies — NBC, CCDC, RSMeans Canada."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "batimatech", email = "contact@batimatech.ca" },
]
keywords = ["openconstructionerp", "ocerp", "partner-pack", "canada", "nbc", "ccdc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Other Audience",
    "Topic :: Office/Business",
    "Natural Language :: French",
    "Natural Language :: English",
]
dependencies = [
    "openconstructionerp>=5.5.0",
]

[project.urls]
Homepage = "https://batimatech.ca"
Source = "https://github.com/DataDrivenConstruction/openconstructionerp"

[project.entry-points."openconstructionerp.partner_packs"]
batimatech-ca = "openconstructionerp_batimatech_ca:MANIFEST"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openconstructionerp_batimatech_ca = [
    "logo.svg",
    "favicon.ico",
    "onboarding.yaml",
    "locales/*.json",
    "rule_packs/*.json",
]
