[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openconstructionerp-doker-formwork"
version = "0.1.0"
description = "Doker formwork partner pack for OpenConstructionERP — Schalung / concrete / Bewehrung presets."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "OpenConstructionERP", email = "info@datadrivenconstruction.io" },
    { name = "Doker", email = "info@datadrivenconstruction.io" },
]
keywords = ["openconstructionerp", "partner-pack", "formwork", "schalung", "doker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Construction",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Industry-Specific",
]
dependencies = [
    "openconstructionerp>=5.5.0",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://doker.com"
Source = "https://github.com/DataDrivenConstruction/openconstructionerp"

[project.entry-points."openconstructionerp.partner_packs"]
doker-formwork = "openconstructionerp_doker_formwork:MANIFEST"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openconstructionerp_doker_formwork = [
    "logo.svg",
    "onboarding.yaml",
    "locales/*.json",
    "rule_packs/*.json",
]
