[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openconstructionerp-india-cpwd"
version = "0.2.0"
description = "Pre-configured partner pack for Indian contractors, PSUs and private developers — CPWD Specs 2019 + Works Manual 2019 + DSR 2023, IS-codes bundle (456, 800, 1893, 875, 13920), NBC 2016 + 2024 amendments, RERA 2016, GST + TDS u/s 194C + BOCW labour cess. English + Hindi UI."
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "OpenConstructionERP", email = "info@datadrivenconstruction.io" },
]
keywords = ["openconstructionerp", "ocerp", "partner-pack", "india", "cpwd", "dsr", "is-codes", "nbc", "rera", "gst", "tds-194c", "labour-cess", "hindi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Other Audience",
    "Topic :: Office/Business",
    "Natural Language :: Hindi",
    "Natural Language :: English",
]
dependencies = [
    "openconstructionerp>=5.5.0",
]

[project.urls]
Source = "https://github.com/DataDrivenConstruction/openconstructionerp"

[project.entry-points."openconstructionerp.partner_packs"]
india-cpwd = "openconstructionerp_india_cpwd:MANIFEST"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openconstructionerp_india_cpwd = [
    "logo.svg",
    "onboarding.yaml",
    "locales/*.json",
    "rule_packs/*.json",
]
