[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openconstructionerp-uk-jct"
version = "0.2.0"
description = "Pre-configured partner pack for UK general contractors — RICS NRM 1+2+3, JCT 2024 contract suite, BCIS cost benchmarks, CDM 2015, Building Safety Act 2022."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "OpenConstructionERP", email = "info@datadrivenconstruction.io" },
]
keywords = [
    "openconstructionerp",
    "ocerp",
    "partner-pack",
    "uk",
    "nrm",
    "jct",
    "bcis",
    "cdm",
    "building-safety-act",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Other Audience",
    "Topic :: Office/Business",
    "Natural Language :: English",
]
dependencies = [
    "openconstructionerp>=5.5.0",
]

[project.urls]
Source = "https://github.com/DataDrivenConstruction/openconstructionerp"

[project.entry-points."openconstructionerp.partner_packs"]
uk-jct = "openconstructionerp_uk_jct:MANIFEST"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openconstructionerp_uk_jct = [
    "logo.svg",
    "onboarding.yaml",
    "locales/*.json",
    "rule_packs/*.json",
]
