[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openconstructionerp-us-rsmeans"
version = "0.2.0"
description = "Pre-configured partner pack for US general contractors — CSI MasterFormat 2020 + UniFormat II, AIA A201-2017 + Owner-Contractor family, OSHA 29 CFR 1926, IBC 2021, and RSMeans City Cost Index for 720+ US metros."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "OpenConstructionERP", email = "info@datadrivenconstruction.io" },
]
keywords = [
    "openconstructionerp",
    "ocerp",
    "partner-pack",
    "usa",
    "masterformat",
    "uniformat",
    "aia",
    "rsmeans",
    "osha",
    "ibc",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Manufacturing",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Natural Language :: English",
]
dependencies = [
    "openconstructionerp>=5.5.0",
]

[project.urls]
Source = "https://github.com/DataDrivenConstruction/openconstructionerp"

[project.entry-points."openconstructionerp.partner_packs"]
us-rsmeans = "openconstructionerp_us_rsmeans:MANIFEST"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openconstructionerp_us_rsmeans = [
    "logo.svg",
    "onboarding.yaml",
    "locales/*.json",
    "rule_packs/*.json",
]
